--- a/style.css
+++ b/style.css
@@ -1,28 +1,33 @@
 body {
   border: 20px solid #bdc3c7;
   font-family: "Source Sans Pro", sans-serif;
+  width: 80%;
   max-width: 700px;
+  padding: 20px;
+  margin: 20px auto;
 }
 
 #date {
   color: #3498db;
   font-weight: 600;
-  padding: 0 5%;
+  letter-spacing: 0.2rem;
 }
 
 h2 {
   color: #2c3e50;
-  padding: 0 5%;
+  font-size: 2rem;
 }
 
 .with_left_border {
-  border-left: 5px solid grey;
+  border-left: 5px solid #bdc3c7;
+  padding-left: 5px;
 }
 
-p {
-  padding: 0 5%;
-}
-
-div .blog_post {
+.blog_post {
   border-bottom: 3px solid grey;
+}
+
+h3 {
+  text-align: right;
+  padding: 0 5%;
 }
